<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        

        <Button
            android:id="@+id/toCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:background="@drawable/myButton"
            android:text="@string/credits"
            android:typeface="serif" />

        <SeekBar
            android:id="@+id/volumeSlider"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="20dp" />

    </RelativeLayout>

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="left|top"
	    android:text="@string/volume"
	    android:textAppearance="?android:attr/textAppearanceSmall"
	    android:textColor="#FFFFFF"
	    android:paddingLeft="40dp"
	    android:typeface="serif"/>
   		
	<LinearLayout
		android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:gravity="center"
    	android:orientation="vertical" >
	
    <ImageButton
        android:id="@+id/sound_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/picture"
        
        android:padding="10dp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:gravity="center"
        android:orientation="horizontal" >
    	
        <ImageButton
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/previous_button"
            android:padding="24dp"
            android:src="@drawable/previous_button" />
        
        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/play_button"
            android:padding="24dp"
            android:src="@drawable/play_button" />
        
        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/next_button"
            android:padding="24dp"
            android:src="@drawable/next_button" />
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/sound_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:typeface="serif"/>
	</LinearLayout>
</LinearLayout>


